python/lapack_like/factor.py


def RQ(A,factType=RQ_IMPLICIT):
  if type(A) is Matrix:
    if factType == RQ_IMPLICIT:
      t = Matrix(A.tag)
      d = Matrix(Base(A.tag))
      args = [A.obj,t.obj,d.obj]
      if   A.tag == sTag: lib.ElRQ_s(*args)
      elif A.tag == dTag: lib.ElRQ_d(*args)
      elif A.tag == cTag: lib.ElRQ_c(*args)
      elif A.tag == zTag: lib.ElRQ_z(*args)
      else: DataExcept()
      return t, d
    elif factType == RQ_EXPLICIT:
      raise Exception('Explicit RQ factorization not yet supported')
      #R = Matrix(A.tag)
      #if   A.tag == sTag: lib.ElRQExplicit_s(R.obj,A.obj)
      #elif A.tag == dTag: lib.ElRQExplicit_d(R.obj,A.obj)
      #elif A.tag == cTag: lib.ElRQExplicit_c(R.obj,A.obj)
      #elif A.tag == zTag: lib.ElRQExplicit_z(R.obj,A.obj)
      #else: raise Exception('Unsupported datatype')
      #return R
    elif factType == RQ_EXPLICIT_UNITARY:
      raise Exception('Explicit unitary factor from RQ not yet supported')
      #if   A.tag == sTag: lib.ElRQExplicitUnitary_s(A.obj)
      #elif A.tag == dTag: lib.ElRQExplicitUnitary_d(A.obj)
      #elif A.tag == cTag: lib.ElRQExplicitUnitary_c(A.obj)
      #elif A.tag == zTag: lib.ElRQExplicitUnitary_z(A.obj)
      #else: raise Exception('Unsupported datatype')
    elif factType == RQ_EXPLICIT_TRIANG:
      args = [A.obj]
      if   A.tag == sTag: lib.ElRQExplicitTriang_s(*args)
      elif A.tag == dTag: lib.ElRQExplicitTriang_d(*args)
      elif A.tag == cTag: lib.ElRQExplicitTriang_c(*args)
      elif A.tag == zTag: lib.ElRQExplicitTriang_z(*args)
      else: DataExcept()
    else: raise Exception('Unsupported RQ factorization type')
  elif type(A) is DistMatrix:
    if factType == RQ_IMPLICIT:
      t = DistMatrix(A.tag,MC,STAR,A.Grid())
      d = DistMatrix(Base(A.tag),MC,STAR,A.Grid())
      args = [A.obj,t.obj,d.obj]
      if   A.tag == sTag: lib.ElRQDist_s(*args)
      elif A.tag == dTag: lib.ElRQDist_d(*args)
      elif A.tag == cTag: lib.ElRQDist_c(*args)
      elif A.tag == zTag: lib.ElRQDist_z(*args)
      else: DataExcept()
      return t, d
    elif factType == RQ_EXPLICIT:
      raise Exception('Explicit RQ factorization not yet supported')
      #R = DistMatrix(A.tag,MC,MR,A.Grid())
      #if   A.tag == sTag: lib.ElRQExplicitDist_s(R.obj,A.obj)
      #elif A.tag == dTag: lib.ElRQExplicitDist_d(R.obj,A.obj)
      #elif A.tag == cTag: lib.ElRQExplicitDist_c(R.obj,A.obj)
      #elif A.tag == zTag: lib.ElRQExplicitDist_z(R.obj,A.obj)
      #else: raise Exception('Unsupported datatype')
      #return R
    elif factType == RQ_EXPLICIT_UNITARY:
      raise Exception('Explicit unitary factor from RQ not yet supported')
      #if   A.tag == sTag: lib.ElRQExplicitUnitaryDist_s(A.obj)
      #elif A.tag == dTag: lib.ElRQExplicitUnitaryDist_d(A.obj)
      #elif A.tag == cTag: lib.ElRQExplicitUnitaryDist_c(A.obj)
      #elif A.tag == zTag: lib.ElRQExplicitUnitaryDist_z(A.obj)
      #else: raise Exception('Unsupported datatype')
    elif factType == RQ_EXPLICIT_TRIANG:
      args = [A.obj]
      if   A.tag == sTag: lib.ElRQExplicitTriangDist_s(*args)
      elif A.tag == dTag: lib.ElRQExplicitTriangDist_d(*args)
      elif A.tag == cTag: lib.ElRQExplicitTriangDist_c(*args)
      elif A.tag == zTag: lib.ElRQExplicitTriangDist_z(*args)
      else: DataExcept()
    else: raise Exception('Unsupported RQ factorization type')
  else: TypeExcept()

lib.ElApplyQAfterRQ_s.argtypes = \
lib.ElApplyQAfterRQ_d.argtypes = \
lib.ElApplyQAfterRQ_c.argtypes = \
lib.ElApplyQAfterRQ_z.argtypes = \
lib.ElApplyQAfterRQDist_s.argtypes = \
lib.ElApplyQAfterRQDist_d.argtypes = \
lib.ElApplyQAfterRQDist_c.argtypes = \
lib.ElApplyQAfterRQDist_z.argtypes = \
  [c_uint,c_uint,c_void_p,c_void_p,c_void_p,c_void_p]

def ApplyQAfterRQ(side,orient,A,t,d,B):
  if type(A) is not type(t) or type(t) is not type(d) or type(d) is not type(B):
    raise Exception('Matrix types of {A,t,d,B} must match')
  if A.tag != t.tag or t.tag != B.tag or d.tag != Base(A.tag):
    raise Exception('Datatypes of {A,t,B} must match and d must have base type')
  args = [side,orient,A.obj,t.obj,d.obj,B.obj]
  if type(A) is Matrix:
    if   A.tag == sTag: lib.ElApplyQAfterRQ_s(*args)
    elif A.tag == dTag: lib.ElApplyQAfterRQ_d(*args)
    elif A.tag == cTag: lib.ElApplyQAfterRQ_c(*args)
    elif A.tag == zTag: lib.ElApplyQAfterRQ_z(*args)
    else: DataExcept()
  elif type(A) is DistMatrix:
    if   A.tag == sTag: lib.ElApplyQAfterRQDist_s(*args)
    elif A.tag == dTag: lib.ElApplyQAfterRQDist_d(*args)
    elif A.tag == cTag: lib.ElApplyQAfterRQDist_c(*args)
    elif A.tag == zTag: lib.ElApplyQAfterRQDist_z(*args)
    else: DataExcept()
  else: TypeExcept()

lib.ElSolveAfterRQ_s.argtypes = \
lib.ElSolveAfterRQ_d.argtypes = \
lib.ElSolveAfterRQ_c.argtypes = \
lib.ElSolveAfterRQ_z.argtypes = \
lib.ElSolveAfterRQDist_s.argtypes = \
lib.ElSolveAfterRQDist_d.argtypes = \
lib.ElSolveAfterRQDist_c.argtypes = \
lib.ElSolveAfterRQDist_z.argtypes = \
  [c_uint,c_void_p,c_void_p,c_void_p,c_void_p,c_void_p]

def SolveAfterRQ(orient,A,t,d,B):
  if type(A) is Matrix:
    X = Matrix(A.tag)
    args = [orient,A.obj,t.obj,d.obj,B.obj,X.obj]
    if   A.tag == sTag: lib.ElSolveAfterRQ_s(*args)
    elif A.tag == dTag: lib.ElSolveAfterRQ_d(*args)
    elif A.tag == cTag: lib.ElSolveAfterRQ_c(*args)
    elif A.tag == zTag: lib.ElSolveAfterRQ_z(*args)
    else: DataExcept()
    return X
  elif type(A) is DistMatrix:
    X = DistMatrix(A.tag,MC,MR,A.Grid())
    args = [orient,A.obj,t.obj,d.obj,B.obj,X.obj]
    if   A.tag == sTag: lib.ElSolveAfterRQDist_s(*args)
    elif A.tag == dTag: lib.ElSolveAfterRQDist_d(*args)
    elif A.tag == cTag: lib.ElSolveAfterRQDist_c(*args)
    elif A.tag == zTag: lib.ElSolveAfterRQDist_z(*args)
    else: DataExcept()
    return X
  else: TypeExcept()

# Generalized QR factorization
# ============================
(GQR_IMPLICIT,GQR_EXPLICIT,GQR_EXPLICIT_TRIANG,GQR_EXPLICIT_UNITARY)=(0,1,2,3)

lib.ElGQR_s.argtypes = \
lib.ElGQR_d.argtypes = \
lib.ElGQR_c.argtypes = \
lib.ElGQR_z.argtypes = \
lib.ElGQRDist_s.argtypes = \
lib.ElGQRDist_d.argtypes = \
lib.ElGQRDist_c.argtypes = \
lib.ElGQRDist_z.argtypes = \
  [c_void_p,c_void_p,c_void_p,c_void_p,c_void_p]

lib.ElGQRExplicitTriang_s.argtypes = \
lib.ElGQRExplicitTriang_d.argtypes = \
lib.ElGQRExplicitTriang_c.argtypes = \
lib.ElGQRExplicitTriang_z.argtypes = \
lib.ElGQRExplicitTriangDist_s.argtypes = \
lib.ElGQRExplicitTriangDist_d.argtypes = \
lib.ElGQRExplicitTriangDist_c.argtypes = \
lib.ElGQRExplicitTriangDist_z.argtypes = \
  [c_void_p,c_void_p]

def GQR(A,B,factType=GQR_IMPLICIT):
  if type(A) is Matrix:
    if factType == GQR_IMPLICIT:
      tA = Matrix(A.tag)
      dA = Matrix(Base(A.tag))
      tB = Matrix(A.tag)
      dB = Matrix(Base(A.tag))
      args = [A.obj,tA.obj,dA.obj,tB.obj,dB.obj]
      if   A.tag == sTag: lib.ElGQR_s(*args)
      elif A.tag == dTag: lib.ElGQR_d(*args)
      elif A.tag == cTag: lib.ElGQR_c(*args)
      elif A.tag == zTag: lib.ElGQR_z(*args)
      else: DataExcept()
      return tA, dA, tB, dB
    elif factType == GQR_EXPLICIT:
      raise Exception('GQR_EXPLICIT not yet supported')
    elif factType == GQR_EXPLICIT_TRIANG:
      B = Matrix(A.tag)
      args = [A.obj,B.obj]
      if   A.tag == sTag: lib.ElGQRExplicitTriang_s(*args)
      elif A.tag == dTag: lib.ElGQRExplicitTriang_d(*args)
      elif A.tag == cTag: lib.ElGQRExplicitTriang_c(*args)
      elif A.tag == zTag: lib.ElGQRExplicitTriang_z(*args)
      else: DataExcept()
      return B
    elif factType == GQR_EXPLICIT_UNITARY:
      raise Exception('GQR_EXPLICIT_UNITARY not yet supported') 
    else: raise Exception('Unsupported GQR factorization type')
  elif type(A) is DistMatrix:
    if factType == GQR_IMPLICIT:
      tA = Matrix(A.tag)
      dA = Matrix(Base(A.tag))
      tB = Matrix(A.tag)
      dB = Matrix(Base(A.tag))
      args = [A.obj,tA.obj,dA.obj,tB.obj,dB.obj]
      if   A.tag == sTag: lib.ElGQRDist_s(*args)
      elif A.tag == dTag: lib.ElGQRDist_d(*args)
      elif A.tag == cTag: lib.ElGQRDist_c(*args)
      elif A.tag == zTag: lib.ElGQRDist_z(*args)
      else: DataExcept()
      return tA, dA, tB, dB
    elif factType == GQR_EXPLICIT:
      raise Exception('GQR_EXPLICIT not yet supported')
    elif factType == GQR_EXPLICIT_TRIANG:
      B = Matrix(A.tag)
      args = [A.obj,B.obj]
      if   A.tag == sTag: lib.ElGQRExplicitTriangDist_s(*args)
      elif A.tag == dTag: lib.ElGQRExplicitTriangDist_d(*args)
      elif A.tag == cTag: lib.ElGQRExplicitTriangDist_c(*args)
      elif A.tag == zTag: lib.ElGQRExplicitTriangDist_z(*args)
      else: DataExcept()
      return B
    elif factType == GQR_EXPLICIT_UNITARY:
      raise Exception('GQR_EXPLICIT_UNITARY not yet supported') 
    else: raise Exception('Unsupported GQR factorization type')
  else: TypeExcept()

# Generalized RQ factorization
# ============================
(GRQ_IMPLICIT,GRQ_EXPLICIT,GRQ_EXPLICIT_TRIANG,GRQ_EXPLICIT_UNITARY)=(0,1,2,3)

lib.ElGRQ_s.argtypes = \
lib.ElGRQ_d.argtypes = \
lib.ElGRQ_c.argtypes = \
lib.ElGRQ_z.argtypes = \
lib.ElGRQDist_s.argtypes = \
lib.ElGRQDist_d.argtypes = \
lib.ElGRQDist_c.argtypes = \
lib.ElGRQDist_z.argtypes = \
  [c_void_p,c_void_p,c_void_p,c_void_p,c_void_p]

lib.ElGRQExplicitTriang_s.argtypes = \
lib.ElGRQExplicitTriang_d.argtypes = \
lib.ElGRQExplicitTriang_c.argtypes = \
lib.ElGRQExplicitTriang_z.argtypes = \
lib.ElGRQExplicitTriangDist_s.argtypes = \
lib.ElGRQExplicitTriangDist_d.argtypes = \
lib.ElGRQExplicitTriangDist_c.argtypes = \
lib.ElGRQExplicitTriangDist_z.argtypes = \
  [c_void_p,c_void_p]

def GRQ(A,B,factType=GRQ_IMPLICIT):
  if type(A) is Matrix:
    if factType == GRQ_IMPLICIT:
      tA = Matrix(A.tag)
      dA = Matrix(Base(A.tag))
      tB = Matrix(A.tag)
      dB = Matrix(Base(A.tag))
      args = [A.obj,tA.obj,dA.obj,tB.obj,dB.obj]
      if   A.tag == sTag: lib.ElGRQ_s(*args)
      elif A.tag == dTag: lib.ElGRQ_d(*args)
      elif A.tag == cTag: lib.ElGRQ_c(*args)
      elif A.tag == zTag: lib.ElGRQ_z(*args)
      else: DataExcept()
      return tA, dA, tB, dB
    elif factType == GRQ_EXPLICIT:
      raise Exception('GRQ_EXPLICIT not yet supported')
    elif factType == GRQ_EXPLICIT_TRIANG:
      B = Matrix(A.tag)
      args = [A.obj,B.obj]
      if   A.tag == sTag: lib.ElGRQExplicitTriang_s(*args)
      elif A.tag == dTag: lib.ElGRQExplicitTriang_d(*args)
      elif A.tag == cTag: lib.ElGRQExplicitTriang_c(*args)
      elif A.tag == zTag: lib.ElGRQExplicitTriang_z(*args)
      else: DataExcept()
      return B
    elif factType == GRQ_EXPLICIT_UNITARY:
      raise Exception('GRQ_EXPLICIT_UNITARY not yet supported') 
    else: raise Exception('Unsupported GRQ factorization type')
  elif type(A) is DistMatrix:
    if factType == GRQ_IMPLICIT:
      tA = Matrix(A.tag)
      dA = Matrix(Base(A.tag))
      tB = Matrix(A.tag)
      dB = Matrix(Base(A.tag))
      args = [A.obj,tA.obj,dA.obj,tB.obj,dB.obj]
      if   A.tag == sTag: lib.ElGRQDist_s(*args)
      elif A.tag == dTag: lib.ElGRQDist_d(*args)
      elif A.tag == cTag: lib.ElGRQDist_c(*args)
      elif A.tag == zTag: lib.ElGRQDist_z(*args)
      else: DataExcept()
      return tA, dA, tB, dB
    elif factType == GRQ_EXPLICIT:
      raise Exception('GRQ_EXPLICIT not yet supported')
    elif factType == GRQ_EXPLICIT_TRIANG:
      B = Matrix(A.tag)
      args = [A.obj,B.obj]
      if   A.tag == sTag: lib.ElGRQExplicitTriangDist_s(*args)
      elif A.tag == dTag: lib.ElGRQExplicitTriangDist_d(*args)
      elif A.tag == cTag: lib.ElGRQExplicitTriangDist_c(*args)
      elif A.tag == zTag: lib.ElGRQExplicitTriangDist_z(*args)
      else: DataExcept()
      return B
    elif factType == GRQ_EXPLICIT_UNITARY:
      raise Exception('GRQ_EXPLICIT_UNITARY not yet supported') 
    else: raise Exception('Unsupported GRQ factorization type')
  else: TypeExcept()
